compiler/e2e/test/snapshot/semantic_element/wf_check/marker_with_constraints/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: unsatisfied predicate
   ╭─ compiler/e2e/test/snapshot/semantic_element/wf_check/marker_with_constraints/main.pnx:24:28
   │
11 │         marker Fizz[T]
   │                ------- the required predicate was declared here
   ·
24 │ public type InstMyStruct = WithRequirement[MyStruct]
   │                            ^^^^^^^^^^^^^^^^^^^^^^^^^ the predicate `marker main::Fizz[bool]` is not satisfied

error: Compilation aborted due to 1 error(s)



stdout:
